src/sass/elsist.scss
@charset "utf-8";

/* Stili riguardanti le pagine da loggato */

#main.columns{
	@media screen and (min-width: 1023px) {
		margin-left: 188px; // 200 - 12 (pixel di padding di default sulle colonne)
	}
}

.els-sidebar{
	display: flex;
    position: fixed;
    top: 53;
    left: 0;
    height: 100vh;
	width: 200px;
	.sidebar-menu li ion-icon, .sidebar-menu li span{
		vertical-align: middle;
	}
	aside{
		width: 100%;
	}

	/* Stile icona outline */

	ion-icon {
		--ionicon-stroke-width: 50px;
	}

	/* Icona colorata su menu attivo */
	a.is-active ion-icon {
		color: #009933;
	}
}

/* Stili riguardanti login */

#login.columns{
	height: 100vh;

	input.input{
		background-color: $grey;
		color: #fff;
		border: 2px solid $grey-dark;
		  
		@include placeholder {
			color: $grey-light;
		}

	}
}

@mixin placeholder {
	::-webkit-input-placeholder { @content };
	:-moz-placeholder           { @content };
	::-moz-placeholder          { @content };
	:-ms-input-placeholder      { @content }; 
}

/* Stile freccia select di bulma */

.select:after {
	border-color: $grey-dark !important;
}

